# mason

./: .gitignore  Cargo.toml  README.md  hello.c  test.lox
lexer/: Cargo.toml
lexer/src/: lib.rs
mason/: Cargo.toml
mason/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs
src/: lexer.rs  main.rs
syntax/: Cargo.toml  build.rs  token_config.jsonc
syntax/src/: lib.rs
