[package]
edition = "2021"
name = "lexer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
syntax = {path = "../syntax"}

[features]
debug = []
