[package]
edition = "2021"
name = "syntax"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
convert_case = "0.6.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"

[features]
debug = []
